--- a/data/cards/02772236.yaml
+++ b/data/cards/02772236.yaml
@@ -15,8 +15,8 @@ name:
   zh-CN: 电力客迈拉
 text:
   en: |-
-    1 "Watt" Tuner + 1 or more non-Tuner Thunder-Type monsters
-    This card can attack your opponent directly. When this card inflicts Battle Damage to your opponent by a direct attack, place 1 random card from your opponent's hand on top of their Deck.
+    1 "Watt" Tuner + 1+ non-Tuner Thunder monsters
+    This card can attack directly. If this card inflicts battle damage to your opponent by a direct attack: Place 1 random card from your opponent's hand on top of their Deck.
   de: |-
     1 "Watt"-Empfänger + 1 oder mehr Nicht-Empfänger-Monster vom Typ Donner
     Diese Karte kann deinen Gegner direkt angreifen. Wenn diese Karte deinem Gegner Kampfschaden durch einen Angriff zufügt, lege 1 zufällige Karte von der Hand deines Gegners auf sein Deck.
@@ -54,7 +54,7 @@ series:
 - Watt
 images:
 - index: 1
-  image: Wattchimera-DREV-EN-UR-1E.jpg
+  image: Wattchimera-OP23-EN-C-UE.png
 sets:
   en:
   - set_number: DREV-EN044
