--- a/data/cards/05554990.yaml
+++ b/data/cards/05554990.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattalfonsino
   fr: Électro-Beryx
   it: Wattberice
-  pt:
+  pt: Wattberyx
   ja: エレキンメダイ
   ja_romaji: Erekinmedai
   ko: 일렉금눈돔
@@ -21,7 +21,6 @@ text:
   es: |-
     Cuando esta carta inflige daño de batalla a tu adversario con un ataque directo, descarta 1 carta al azar de la mano de tu adversario.
   fr: |-
-    Lorsque cette carte inflige des dommages de combat à votre adversaire avec une attaque directe, défaussez 1 carte au hasard depuis la main de votre adversaire.
     Lorsque cette carte inflige des dommages de combat à votre adversaire avec une attaque directe, défaussez 1 carte au hasard depuis la main de votre adversaire.
   it: |-
     Quando questa carta infligge danno da combattimento al tuo avversario con un attacco diretto, scarta 1 carta a caso dalla mano del tuo avversario.
@@ -66,6 +65,11 @@ sets:
     set_name: Storm of Ragnarok
     rarities:
     - Rare
+  pt:
+  - set_number: OP23-PT032
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: STOR-JP031
     set_name: Storm of Ragnarok
