--- a/data/cards/18407024.yaml
+++ b/data/cards/18407024.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattbeta
   fr: Électro-Poisson
   it: Wattpescecombattente
-  pt:
+  pt: Wattbetta
   ja: エレキンギョ
   ja_romaji: Erekingyo
   ko: 일렉금붕어
@@ -63,6 +63,11 @@ sets:
   it:
   - set_number: DREV-IT024
     set_name: Duelist Revolution
+    rarities:
+    - Common
+  pt:
+  - set_number: OP23-PT028
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
