--- a/data/cards/29765339.yaml
+++ b/data/cards/29765339.yaml
@@ -6,7 +6,7 @@ name:
   es: Watthidra
   fr: Électro-Hydre
   it: Wattidra
-  pt:
+  pt: Watthidra
   ja: エレキリム
   ja_romaji: Erekirimu
   ko: 일렉히드라
@@ -76,6 +76,11 @@ sets:
     set_name: Storm of Ragnarok
     rarities:
     - Super Rare
+  pt:
+  - set_number: OP23-PT034
+    set_name: OTS Tournament Pack 23
+    rarities:
+    - Common
   ja:
   - set_number: STOR-JP044
     set_name: Storm of Ragnarok
