--- a/data/cards/32061744.yaml
+++ b/data/cards/32061744.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattcuidador
   fr: Électro-Garde
   it: Wattcontenitore
-  pt:
+  pt: Wattdefensor
   ja: エレキーパー
   ja_romaji: Erekīpā
   ko: 일렉키퍼
@@ -59,6 +59,11 @@ sets:
   it:
   - set_number: STBL-IT074
     set_name: Starstrike Blast
+    rarities:
+    - Common
+  pt:
+  - set_number: OP23-PT036
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
