--- a/data/cards/42309337.yaml
+++ b/data/cards/42309337.yaml
@@ -6,7 +6,7 @@ name:
   es: Contra Contra
   fr: Anti-Contre
   it: Anti-Contrasto
-  pt:
+  pt: Contrarresposta
   ja: カウンター・カウンター
   ja_romaji: Kauntā Kauntā
   ko: 카운터 카운터
@@ -75,6 +75,11 @@ sets:
     - Common
   - set_number: CP07-IT020
     set_name: 'Champion Pack: Game Seven'
+    rarities:
+    - Common
+  pt:
+  - set_number: OP23-PT035
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
