--- a/data/cards/56993276.yaml
+++ b/data/cards/56993276.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattcancelar
   fr: Électro-Annulation
   it: Wattannullamento
-  pt:
+  pt: Wattcancelar
   ja: エレキャンセル
   ja_romaji: Erekyanseru
   ko: 일렉캔슬
@@ -63,6 +63,11 @@ sets:
   it:
   - set_number: PHSW-IT073
     set_name: Photon Shockwave
+    rarities:
+    - Common
+  pt:
+  - set_number: OP23-PT037
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
