--- a/data/cards/97885363.yaml
+++ b/data/cards/97885363.yaml
@@ -6,7 +6,7 @@ name:
   es: Wattlibélula
   fr: Électro-Libellule
   it: Wattlibellula
-  pt:
+  pt: Wattlibélula
   ja: エレキトンボ
   ja_romaji: Erekitonbo
   ko: 일렉잠자리
@@ -63,6 +63,11 @@ sets:
   it:
   - set_number: STBL-IT028
     set_name: Starstrike Blast
+    rarities:
+    - Common
+  pt:
+  - set_number: OP23-PT031
+    set_name: OTS Tournament Pack 23
     rarities:
     - Common
   ja:
