--- a/data/cards/yugipedia1023572.yaml
+++ b/data/cards/yugipedia1023572.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: 幻蝋館の使者
-  ja_romaji:
+  ja: <ruby>幻<rt>げん</rt></ruby><ruby>蝋<rt>ろう</rt></ruby><ruby>館<rt>かん</rt></ruby>の<ruby>使<rt>し</rt></ruby><ruby>者<rt>しゃ</rt></ruby>
+  ja_romaji: Genrōkan no Shisha
   ko:
   ko_rr:
   zh-TW:
@@ -33,7 +33,7 @@ atk: 800
 def: 1800
 images:
 - index: 1
-  image: EnvoyoftheWaxState-PHNI-JP-C.png
+  image: EnvoyoftheWaxState-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP030
