--- a/data/cards/yugipedia1012222.yaml
+++ b/data/cards/yugipedia1012222.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    Cannot be targeted or destroyed by your opponent's card effects. You can only use each of the following effects of "Majespecter Porcupine - Yamaarashi" once per turn. During the Main Phase, if you control a "Majespecter" monster (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can target 1 "Majespecter" Spell in your GY; Set it.
+    While this card is in your Monster Zone, your opponent cannot target it with card effects, also it cannot be destroyed by your opponent's card effects. You can only use each of the following effects of "Majespecter Porcupine - Yamaarashi" once per turn. During the Main Phase, if you control a "Majespecter" monster (Quick Effect): You can Special Summon this card from your hand. If this card is Normal or Special Summoned: You can target 1 "Majespecter" Spell in your GY; Set it.
   de:
   es:
   fr:
