--- a/data/cards/yugipedia1023581.yaml
+++ b/data/cards/yugipedia1023581.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     You can target 1 monster you control that cannot be Normal Summoned/Set with "Guardian" in its original name; it can make a second attack during each Battle Phase this turn. You can banish this card from your GY, then target 1 "Guardian" monster in your GY that cannot be Normal Summoned/Set to activate 1 of these effects;
     ● Add it to your hand.
-    ● Add 1 card that mentions it from your GY to your hand.
+    ● Add 1 card mentioned on it from your GY to your hand.
     You can only use each effect of "Principug" once per turn.
   de:
   es:
