--- a/rush.yaml
+++ b/rush.yaml
@@ -123935,3 +123935,262 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023348
+---
+konami_id:
+name:
+  en: Dark Executor Warlock
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>黒魔導の遂行者<rt>ブラック・エグゼキューター</rt></ruby>
+  ja_romaji: Burakku Eguzekyūtā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card's name becomes "Dark Magician" this turn. Then, you can shuffle 10 Spell Cards from your Graveyard into the Deck. If you do, you can destroy 1 face-up Level 8 or lower monster on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Spellcaster / Effect
+attribute: DARK
+level: 7
+atk: 2500
+def: 2100
+images:
+- index: 1
+  image: DarkExecutorWarlock-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP035
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023688
+---
+konami_id:
+name:
+  en: Super Galaxy King Lord of Galactica
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>超<rt>ちょう</rt></ruby><ruby>銀<rt>ぎん</rt></ruby><ruby>河<rt>が</rt></ruby><ruby>王<rt>おう</rt></ruby>ロード・オブ・ギャラクティカ
+  ja_romaji: Chōgingaō Rōdo Obu Gyarakutika
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Maximum Summon this card together with "Super Galaxy King Lord of Galactica [L]" and "Super Galaxy King Lord of Galactica [R]".
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card by Tributing a Galaxy Type Normal Monster.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 2 Level 10 monsters from your Graveyard to your hand. Then, return this card to the owner's hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Maximum / Effect
+attribute: LIGHT
+level: 10
+atk: 2500
+def: 0
+series:
+- Galactica
+maximum_atk: 4000
+images:
+- index: 1
+  image: SuperGalaxyKingLordofGalactica-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP038
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023691
+---
+konami_id:
+name:
+  en: Super Galaxy King Lord of Galactica [L]
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>超<rt>ちょう</rt></ruby><ruby>銀<rt>ぎん</rt></ruby><ruby>河<rt>が</rt></ruby><ruby>王<rt>おう</rt></ruby>ロード・オブ・ギャラクティカ［<ruby>Ｌ<rt>エル</rt></ruby>］
+  ja_romaji: Chōgingaō Rōdo Obu Gyarakutika [Eru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    1 face-up Galaxy/Spellcaster/Machine/Dragon Type monster with 4000 or more ATK and 4000 or more original ATK on your field loses 4000 ATK until the end of this turn. Then, you can destroy up to 4 cards on your opponent's field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Maximum / Effect
+attribute: LIGHT
+level: 10
+atk: 2500
+def: 0
+series:
+- Galactica
+images:
+- index: 1
+  image: SuperGalaxyKingLordofGalacticaL-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP037
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023692
+---
+konami_id:
+name:
+  en: Super Galaxy King Lord of Galactica (R)
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>超<rt>ちょう</rt></ruby><ruby>銀<rt>ぎん</rt></ruby><ruby>河<rt>が</rt></ruby><ruby>王<rt>おう</rt></ruby>ロード・オブ・ギャラクティカ［<ruby>Ｒ<rt>アール</rt></ruby>］
+  ja_romaji: Chōgingaō Rōdo Obu Gyarakutika [Āru]
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Maximum Mode
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send Normal Monsters from your hand to the Graveyard whose total Levels equal the Level of 1 face-up monster on your opponent's field. Then, you can make this card gain ATK equal to [the ATK of that face-up monster] until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Maximum / Effect
+attribute: LIGHT
+level: 10
+atk: 2500
+def: 0
+series:
+- Galactica
+images:
+- index: 1
+  image: SuperGalaxyKingLordofGalacticaR-RDHC01-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/HC01-JP039
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023694
