--- a/data/rush/16309.yaml
+++ b/data/rush/16309.yaml
@@ -42,7 +42,7 @@ images:
   image: CAND-RDBD04-JP-UPR.png
   illustration: CAND-DBR-JP-VG-artwork-2.png
 - index: 3
-  image: CAND-RDECG1-JP-OP.png
+  image: CAND-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP05-JP002
