--- a/data/rush/16954.yaml
+++ b/data/rush/16954.yaml
@@ -52,6 +52,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP033
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR01-KR003
     set_name: Secret Record Pack
