--- a/data/rush/yugipedia1023692.yaml
+++ b/data/rush/yugipedia1023692.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの元々の攻撃力が４０００以上の表側表示モンスター（ギャラクシー族・魔法使い族・機械族・ドラゴン族／攻撃力４０００以上）１体を選び、その攻撃力をターン終了時まで４０００ダウンする。その後、相手フィールドのカードを４枚まで選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
