--- a/data/rush/15410.yaml
+++ b/data/rush/15410.yaml
@@ -46,6 +46,8 @@ images:
 - index: 2
   image: DarkMagician-RDGRP1-JP-ScR.png
   illustration: DarkMagician-G002-JP-VG-artwork-2.png
+- index: 3
+  image: DarkMagician-RDHC01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP02-JP000
@@ -68,6 +70,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+  - set_number: RD/HC01-JP001
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/KP02-KR000
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
