--- a/data/rush/19438.yaml
+++ b/data/rush/19438.yaml
@@ -46,7 +46,7 @@ atk: 1000
 def: 800
 images:
 - index: 1
-  image: CyberTutu-RDECG1-JP-OP.png
+  image: CyberTutu-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP004
