--- a/data/rush/19444.yaml
+++ b/data/rush/19444.yaml
@@ -44,7 +44,7 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: SilversCry-RDECG1-JP-OP.png
+  image: SilversCry-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP010
