--- a/data/rush/yugipedia1023688.yaml
+++ b/data/rush/yugipedia1023688.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードのカード名はこのターン、「ブラック・マジシャン」になる。その後、自分の墓地の魔法カード１０枚を選んでデッキに戻す事ができる。戻した場合、さらに相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -42,6 +44,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 2100
+series:
+- Dark Magician
 images:
 - index: 1
   image: DarkExecutorWarlock-RDHC01-JP-OP.png
