--- a/data/rush/yugipedia1023691.yaml
+++ b/data/rush/yugipedia1023691.yaml
@@ -20,7 +20,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「超銀河王ロード・オブ・ギャラクティカ［Ｌ］」「超銀河王ロード・オブ・ギャラクティカ［Ｒ］」と揃えてマキシマム召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -32,10 +33,14 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    通常モンスター（ギャラクシー族）をリリースしてこのカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Add 2 Level 10 monsters from your Graveyard to your hand. Then, return this card to the owner's hand.
@@ -44,7 +49,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル１０）２体を選んで手札に加える。その後、このカードを持ち主の手札に戻す。
   ko:
   zh-TW:
   zh-CN:
