--- a/rush.yaml
+++ b/rush.yaml
@@ -74,7 +74,7 @@ images:
 - index: 6
   image: SevensRoadMagician-RDCCC1-JP-NPR.png
 - index: 7
-  image: SevensRoadMagician-RDECG1-JP-OP.png
+  image: SevensRoadMagician-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ST01-JP001
@@ -1133,7 +1133,7 @@ images:
   image: MultistrikeDragonDragias-RDMRP2-JP-ScR.png
   illustration: MultistrikeDragonDragias-DBR-JP-VG-artwork-2.png
 - index: 6
-  image: MultistrikeDragonDragias-RDECG1-JP-OP.png
+  image: MultistrikeDragonDragias-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ST02-JP001
@@ -6429,6 +6429,8 @@ images:
 - index: 2
   image: DarkMagician-RDGRP1-JP-ScR.png
   illustration: DarkMagician-G002-JP-VG-artwork-2.png
+- index: 3
+  image: DarkMagician-RDHC01-JP-OP.png
 sets:
   ja:
   - set_number: RD/KP02-JP000
@@ -6451,6 +6453,10 @@ sets:
     set_name: Megaroad Pack 2
     rarities:
     - Rare
+  - set_number: RD/HC01-JP001
+    set_name: High-Grade Collection
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/KP02-KR000
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
@@ -13096,7 +13102,7 @@ images:
   image: RoyalRebelsRocker-RDCP01-JP-SR.png
   illustration: RoyalRebelsRocker-DBR-JP-VG-artwork.png
 - index: 2
-  image: RoyalRebelsRocker-RDECG1-JP-OP.png
+  image: RoyalRebelsRocker-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/CP01-JP017
@@ -28559,7 +28565,7 @@ images:
   image: CAND-RDBD04-JP-UPR.png
   illustration: CAND-DBR-JP-VG-artwork-2.png
 - index: 3
-  image: CAND-RDECG1-JP-OP.png
+  image: CAND-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP05-JP002
@@ -47367,6 +47373,10 @@ sets:
     set_name: Yu-Gi-Oh! Rush Duel Duel Disk
     rarities:
     - Secret Rare
+  - set_number: RD/HC01-JP033
+    set_name: High-Grade Collection
+    rarities:
+    - Ultra Rare
   ko:
   - set_number: RD/SR01-KR003
     set_name: Secret Record Pack
@@ -48935,7 +48945,7 @@ images:
   image: KimelunatheDarkShifter-RDBD05-JP-UPR.png
   illustration: KimelunatheDarkShifter-G002-JP-VG-artwork-2.png
 - index: 3
-  image: KimelunatheDarkShifter-RDECG1-JP-OP.png
+  image: KimelunatheDarkShifter-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/KP07-JP017
@@ -60044,7 +60054,7 @@ images:
 - index: 2
   image: TransamuRainac-RD711B-JP-NPR.png
 - index: 3
-  image: TransamuRainac-RDECG1-JP-OP.png
+  image: TransamuRainac-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/S221-JP001
@@ -78227,7 +78237,7 @@ images:
   image: RedBootBoostDragon-RDSD03-JP-C.png
   illustration: RedBootBoostDragon-G002-JP-VG-artwork.png
 - index: 2
-  image: RedBootBoostDragon-RDECG1-JP-OP.png
+  image: RedBootBoostDragon-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SD03-JP001
@@ -80565,7 +80575,7 @@ images:
   image: VoidvelgrTransi-RDSJMP-JP-NPR.png
   illustration: VoidvelgrTransi-G002-JP-VG-artwork.png
 - index: 2
-  image: VoidvelgrTransi-RDECG1-JP-OP.png
+  image: VoidvelgrTransi-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP018
@@ -85610,7 +85620,7 @@ images:
   image: CombustionOniBunsel-RDSJMP-JP-NPR.png
   illustration: CombustionOniBunsel-G002-JP-VG-artwork.png
 - index: 2
-  image: CombustionOniBunsel-RDECG1-JP-OP.png
+  image: CombustionOniBunsel-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP020
@@ -85753,7 +85763,7 @@ images:
   image: JointechRaptor-RDSJMP-JP-NPR.png
   illustration: JointechRaptor-G002-JP-VG-artwork.png
 - index: 2
-  image: JointechRaptor-RDECG1-JP-OP.png
+  image: JointechRaptor-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/SJMP-JP021
@@ -115857,7 +115867,7 @@ materials:
   zh-CN:
 images:
 - index: 1
-  image: ThousandDragon-RDECG1-JP-OP.png
+  image: ThousandDragon-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP001
@@ -115915,7 +115925,7 @@ def: 400
 legend: true
 images:
 - index: 1
-  image: TimeWizard-RDECG1-JP-OP.png
+  image: TimeWizard-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP002
@@ -115977,7 +115987,7 @@ series:
 - Harpie
 images:
 - index: 1
-  image: HarpieCielo-RDECG1-JP-OP.png
+  image: HarpieCielo-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP003
@@ -116039,7 +116049,7 @@ atk: 1000
 def: 800
 images:
 - index: 1
-  image: CyberTutu-RDECG1-JP-OP.png
+  image: CyberTutu-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP004
@@ -116116,7 +116126,7 @@ series:
 - Gaia
 images:
 - index: 1
-  image: SwiftGaiatheFierceKnight-RDECG1-JP-OP.png
+  image: SwiftGaiatheFierceKnight-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP005
@@ -116163,7 +116173,7 @@ atk: 1400
 def: 1500
 images:
 - index: 1
-  image: RedArcheryGirl-RDECG1-JP-OP.png
+  image: RedArcheryGirl-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP006
@@ -116207,7 +116217,7 @@ atk: 1500
 def: 1000
 images:
 - index: 1
-  image: DestroyerGolem-RDECG1-JP-OP.png
+  image: DestroyerGolem-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP007
@@ -116251,7 +116261,7 @@ atk: 1500
 def: 1200
 images:
 - index: 1
-  image: TheSnakeHair-RDECG1-JP-OP.png
+  image: TheSnakeHair-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP008
@@ -116304,7 +116314,7 @@ card_type: Spell
 property: Normal
 images:
 - index: 1
-  image: Confiscation-RDECG1-JP-OP.png
+  image: Confiscation-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP009
@@ -116362,7 +116372,7 @@ series:
 - Blue-Eyes
 images:
 - index: 1
-  image: SilversCry-RDECG1-JP-OP.png
+  image: SilversCry-RDECG1-JP-NPR.png
 sets:
   ja:
   - set_number: RD/ECG1-JP010
@@ -123958,7 +123968,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -123970,7 +123981,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードのカード名はこのターン、「ブラック・マジシャン」になる。その後、自分の墓地の魔法カード１０枚を選んでデッキに戻す事ができる。戻した場合、さらに相手フィールドの表側表示モンスター（レベル８以下）１体を選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -123980,6 +123992,8 @@ attribute: DARK
 level: 7
 atk: 2500
 def: 2100
+series:
+- Dark Magician
 images:
 - index: 1
   image: DarkExecutorWarlock-RDHC01-JP-OP.png
@@ -124018,7 +124032,8 @@ summoning_condition:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「超銀河王ロード・オブ・ギャラクティカ［Ｌ］」「超銀河王ロード・オブ・ギャラクティカ［Ｒ］」と揃えてマキシマム召喚できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124030,10 +124045,14 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    通常モンスター（ギャラクシー族）をリリースしてこのカードを召喚したターンに発動できる。
   ko:
   zh-TW:
   zh-CN:
+effect_types:
+- Summoning condition
+- Effect
 effect:
   en: |-
     Add 2 Level 10 monsters from your Graveyard to your hand. Then, return this card to the owner's hand.
@@ -124042,7 +124061,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル１０）２体を選んで手札に加える。その後、このカードを持ち主の手札に戻す。
   ko:
   zh-TW:
   zh-CN:
@@ -124093,7 +124113,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124105,7 +124126,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分フィールドの元々の攻撃力が４０００以上の表側表示モンスター（ギャラクシー族・魔法使い族・機械族・ドラゴン族／攻撃力４０００以上）１体を選び、その攻撃力をターン終了時まで４０００ダウンする。その後、相手フィールドのカードを４枚まで選んで破壊できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124135,7 +124157,7 @@ yugipedia_page_id: 1023692
 ---
 konami_id:
 name:
-  en: Super Galaxy King Lord of Galactica (R)
+  en: Super Galaxy King Lord of Galactica [R]
   de:
   es:
   fr:
@@ -124155,7 +124177,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    マキシマムモード
   ko:
   zh-TW:
   zh-CN:
@@ -124167,7 +124190,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    相手フィールドの表側表示モンスター１体を選び、レベルの合計がそのモンスターのレベルと同じになるように自分は手札の通常モンスターを墓地へ送る。その後、このカードの攻撃力をターン終了時まで、［選んだ表側表示モンスターの攻撃力］だけアップできる。
   ko:
   zh-TW:
   zh-CN:
