--- a/data/cards/yugipedia1012284.yaml
+++ b/data/cards/yugipedia1012284.yaml
@@ -35,7 +35,7 @@ series:
 - White
 images:
 - index: 1
-  image: WhiteSardine-PHNI-JP-OP.png
+  image: WhiteSardine-PHNI-JP-R.png
 sets:
   ja:
   - set_number: PHNI-JP007
