--- a/data/cards/yugipedia1012285.yaml
+++ b/data/cards/yugipedia1012285.yaml
@@ -35,7 +35,7 @@ series:
 - White
 images:
 - index: 1
-  image: WhiteSunfish-PHNI-JP-OP.png
+  image: WhiteSunfish-PHNI-JP-C.png
 sets:
   ja:
   - set_number: PHNI-JP006
