--- a/data/cards/yugipedia1022897.yaml
+++ b/data/cards/yugipedia1022897.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a "Raidraptor" monster(s) is Special Summoned from the Extra Deck to your field: You can add 1 "Raidraptor" Spell/Trap from your Deck to your hand, except "Raidraptor - Roost". You can target 3 of your "Raidraptor" monsters that are banished and/or in your GY; place them on the bottom of the Deck in any order, then draw 1 card. You can only use each effect of "Raidraptor - Roost" once per turn.
+    If a "Raidraptor" monster(s) is Special Summoned from the Extra Deck to your field (except during the Damage Step): You can add 1 "Raidraptor" Spell/Trap from your Deck to your hand, except "Raidraptor - Roost". You can target 3 of your "Raidraptor" monsters that are banished and/or in your GY; place them on the bottom of the Deck in any order, then draw 1 card. You can only use each effect of "Raidraptor - Roost" once per turn.
   de:
   es:
   fr:
