--- a/data/cards/kdb19456.yaml
+++ b/data/cards/kdb19456.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19456
 password:
 name:
   en: Spirit of Yubel
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：相手モンスターの攻撃宣言時に発動できる。このカードを手札から特殊召喚する。②：このカードが特殊召喚した場合に発動できる。デッキから「ユベル」のカード名が記された魔法・罠カード１枚を選び、手札に加えるか自分フィールドにセットする。③：このカードは戦闘では破壊されず、このカードの戦闘で発生する自分への戦闘ダメージは０になる。④：このカードが破壊された場合に発動できる。自分の手札・デッキ・墓地・除外状態の「ユベル」１体を特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -41,9 +42,16 @@ sets:
   - set_number: PHNI-JP001
     set_name: Phantom Nightmare
     rarities:
+    - Secret Rare
+    - Quarter Century Secret Rare
+  - set_number: PHNI-JP001
+    set_name: Phantom Nightmare +1 Bonus Pack
+    rarities:
+    - Super Rare
+    - Quarter Century Secret Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
