--- a/data/cards/kdb19458.yaml
+++ b/data/cards/kdb19458.yaml
@@ -1,4 +1,4 @@
-konami_id:
+konami_id: 19458
 password:
 name:
   en: Samsara Regenerating Lotus
@@ -21,7 +21,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカード名の①②③の効果はそれぞれ１ターンに１度しか使用できない。①：このカードをリリースして発動できる。デッキから「ユベル」モンスター１体を特殊召喚する。②：相手ターンに、自分フィールドに「ユベル」モンスターが存在し、モンスターの効果が発動した時、このカードをリリースして発動できる。その効果は「フィールドの「ユベル」モンスター１体を破壊する」となる。③：このカードが墓地に存在し、自分フィールドに「ユベル」が存在する場合、自分エンドフェイズに発動できる。このカードを手札に加えるか特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -44,7 +45,7 @@ sets:
     - Rare
 limit_regulation:
   tcg: Not yet released
-  ocg: Not yet released
+  ocg: Unlimited
 is_translation_unofficial:
   name:
     en: true
