--- a/data/cards/kdb19473.yaml
+++ b/data/cards/kdb19473.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If you control a "Horus" monster and "King's Sarcophagus": You can reveal this card in your hand and send 1 card from your hand or field to the GY; send 1 card on the field to the GY. If a face-up "King's Sarcophagus", and/or "Horus" monster(s) other than "Horus the Black Flame Deity", you control leaves the field by an opponent's card effect: You can Special Summon this card from your hand, then you can send all other monsters on the field to the GY. You can only use each effect of "Horus the Black Flame Deity" once per turn.
+    If you control a "Horus" monster and "King's Sarcophagus": You can reveal this card in your hand, then send 1 card from your hand or field to the GY; send 1 card on the field to the GY. If a face-up "King's Sarcophagus", and/or "Horus" monster(s) other than "Horus the Black Flame Deity", you control leaves the field by an opponent's card effect (except during the Damage Step): You can Special Summon this card from your hand, then you can send all other monsters on the field to the GY. You can only use each effect of "Horus the Black Flame Deity" once per turn.
   de:
   es:
   fr:
