--- a/data/cards/yugipedia1012081.yaml
+++ b/data/cards/yugipedia1012081.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    This card can be used to Ritual Summon any LIGHT Ritual Monster. You must also Tribute LIGHT monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. If a face-up LIGHT Ritual Monster(s) you control leaves the field by an opponent's card effect: You can banish this card from your GY; Special Summon 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", or "Skull Guardian, the Silenforcing Protector" from your hand or Deck, ignoring its Summoning conditions. You can only use this effect of "Silenforcing Prayer" once per turn.
+    This card can be used to Ritual Summon any LIGHT Ritual Monster. You must also Tribute LIGHT monsters from your hand or field whose total Levels equal or exceed the Level of the Ritual Monster you Ritual Summon. If a face-up LIGHT Ritual Monster(s) you control leaves the field by an opponent's card effect (except during the Damage Step): You can banish this card from your GY; Special Summon 1 "Sauravis, the Ancient and Ascended", "Saffira, Queen of Dragons", or "Skull Guardian, the Silenforcing Protector" from your hand or Deck, ignoring its Summoning conditions. You can only use this effect of "Silenforcing Prayer" once per turn.
   de:
   es:
   fr:
