--- a/data/cards/yugipedia1018876.yaml
+++ b/data/cards/yugipedia1018876.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    You can banish up to 3 FIRE monsters from your GY; this card gains 400 ATK for each, until the end of this turn. If a face-up FIRE monster(s) you control is destroyed by card effect while this card is in your GY: You can Special Summon this card (but banish it when it leaves the field), then draw 1 card. You can only use each effect of "Magmacho Dragon" once per turn.
+    You can banish up to 3 FIRE monsters from your GY; this card gains 400 ATK for each, until the end of this turn. If a face-up FIRE monster(s) you control is destroyed by card effect while this card is in your GY (except during the Damage Step): You can Special Summon this card (but banish it when it leaves the field), then draw 1 card. You can only use each effect of "Magmacho Dragon" once per turn.
   de:
   es:
   fr:
