--- a/data/cards/yugipedia1019546.yaml
+++ b/data/cards/yugipedia1019546.yaml
@@ -16,7 +16,7 @@ name:
 text:
   en: |-
     2 Level 3 monsters
-    If this card is Xyz Summoned: You can add 1 "Goblin" monster from your Deck to your hand. If a material(s) is detached from a monster(s) on the field: You can target 1 other face-up monster on the field; attach it to this card as material. During the End Phase: You can attach 1 "Goblin" monster from your Deck to this card as material. You can only use each effect of "Goblin Rider Big-Head Gabonga" once per turn.
+    If this card is Xyz Summoned: You can add 1 "Goblin" monster from your Deck to your hand. If a material(s) is detached from a monster(s) on the field (except during the Damage Step): You can target 1 other face-up monster on the field; attach it to this card as material. During the End Phase: You can attach 1 "Goblin" monster from your Deck to this card as material. You can only use each effect of "Goblin Rider Big-Head Gabonga" once per turn.
   de:
   es:
   fr:
