--- a/data/cards/yugipedia1020941.yaml
+++ b/data/cards/yugipedia1020941.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN:
 text:
   en: |-
-    If a monster(s) you controlled was destroyed by your Spell effect or an opponent's card effect, and sent to the GY this turn: You can conduct your next Battle Phase twice. If a monster(s) you control is returned to the Deck and/or face-down Extra Deck while this card is in your GY: You can add this card to your hand. You can only use this effect of "The Passage of Stars and Frost" once per turn.
+    If a monster(s) you controlled was destroyed by your Spell effect or an opponent's card effect, and sent to the GY this turn: You can conduct your next Battle Phase twice. If a monster(s) you control is returned to the Deck and/or face-down Extra Deck while this card is in your GY (except during the Damage Step): You can add this card to your hand. You can only use this effect of "The Passage of Stars and Frost" once per turn.
   de:
   es:
   fr:
