--- a/rush.yaml
+++ b/rush.yaml
@@ -96508,8 +96508,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>斬<rt>き</rt></ruby><ruby>奏<rt>そう</rt></ruby>のプレクトクライム
-  ja_romaji: Kisō no Purekutokuraimu
+  ja: <ruby>斬<rt>ざ</rt></ruby><ruby>奏<rt>そう</rt></ruby>のプレクトクライム
+  ja_romaji: Zansō no Purekutokuraimu
   ko:
   ko_rr:
   zh-TW:
@@ -124218,3 +124218,133 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023694
+---
+konami_id:
+name:
+  en: Raging Waves
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>荒<rt>あら</rt></ruby><ruby>波<rt>なみ</rt></ruby>
+  ja_romaji: Aranami
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    While this card is face-up in the Field Zone, a player that has exactly 1 monster on their field can only attack monsters with Fish/Sea Serpent/Thunder/Aqua Type monsters.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Field
+images:
+- index: 1
+  image: RagingWaves-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP055
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023773
+---
+konami_id:
+name:
+  en: Plectclive the Dynamauve Deadly Dirge
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>旋<rt>せん</rt></ruby><ruby>紫<rt>し</rt></ruby><ruby>斬<rt>ざん</rt></ruby><ruby>奏<rt>そう</rt></ruby>のプレクトクライブ
+  ja_romaji: Senshizansō no Purekutokuraibu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Reveal up to 2 Spell Cards in your hand to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon Level 8 or lower WIND Attribute Psychic Type monsters from your Graveyard equal to [the number of cards revealed to meet the requirement] face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Psychic / Fusion / Effect
+attribute: WIND
+level: 9
+atk: 3000
+def: 2100
+materials:
+  en: |-
+    "Plectcrime of the Deadly Dirge" + "Fiddlebadour"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+series:
+- Shaman Bandit
+images:
+- index: 1
+  image: PlectclivetheDynamauveDeadlyDirge-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP043
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023775
