--- a/data/rush/yugipedia1023773.yaml
+++ b/data/rush/yugipedia1023773.yaml
@@ -20,7 +20,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -32,7 +33,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、自身のフィールドのモンスターが１体のみのプレイヤーはモンスター（魚族・海竜族・雷族・水族）でしかモンスターに攻撃できない。
   ko:
   zh-TW:
   zh-CN:
