--- a/rush.yaml
+++ b/rush.yaml
@@ -96508,7 +96508,7 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>斬<rt>ざ</rt></ruby><ruby>奏<rt>そう</rt></ruby>のプレクトクライム
+  ja: <ruby>斬<rt>ざん</rt></ruby><ruby>奏<rt>そう</rt></ruby>のプレクトクライム
   ja_romaji: Zansō no Purekutokuraimu
   ko:
   ko_rr:
@@ -124241,7 +124241,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    なし
   ko:
   zh-TW:
   zh-CN:
@@ -124253,7 +124254,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    このカードがフィールドゾーンに表側表示である限り、自身のフィールドのモンスターが１体のみのプレイヤーはモンスター（魚族・海竜族・雷族・水族）でしかモンスターに攻撃できない。
   ko:
   zh-TW:
   zh-CN:
@@ -124297,7 +124299,8 @@ requirement:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    手札の魔法カードを２枚まで相手に見せて発動できる。
   ko:
   zh-TW:
   zh-CN:
@@ -124309,7 +124312,8 @@ effect:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    自分の墓地のモンスター（レベル８以下／風属性／サイキック族）を［この効果の条件で見せたカードの数］だけ選び、自分フィールドに表側表示で特殊召喚する。
   ko:
   zh-TW:
   zh-CN:
@@ -124327,7 +124331,8 @@ materials:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    「斬奏のプレクトクライム」＋「フィドルバドゥール」
   ko:
   zh-TW:
   zh-CN:
