--- a/data/cards/04266839.yaml
+++ b/data/cards/04266839.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     フィールド上に裏側守備表示で存在するこのカードが相手モンスターに攻撃された場合、そのダメージ計算前にこのカードは攻撃モンスターの装備カードになる。相手のスタンバイフェイズ毎に、このカードの装備モンスターの攻撃力の半分の数値分、自分のライフポイントを回復する。
   ko: |-
-    뒷면 수비 표시의 이 카드를 상대 몬스터가 공격했을 때, 이 카드는 공격 몬스터의 장착 카드가 된다(데미지 계산은 서로 0). 상대 턴의 스텐바이 페이즈마다 자신은 장착 몬스터의 공격력 절반의 라이프 포인트를 회복한다.
+    뒷면 수비 표시의 이 카드를 상대 몬스터가 공격했을 때, 이 카드는 공격 몬스터의 장착 카드가 된다(데미지 계산은 실행하지 않는다). 상대 턴의 스텐바이 페이즈마다 자신은 장착 몬스터의 공격력 절반의 라이프 포인트를 회복한다.
   zh-TW:
   zh-CN: |-
     场上里侧守备表示存在的这张卡被对方怪兽攻击的场合，那次伤害计算前这张卡变成攻击怪兽的装备卡。每次对方的准备阶段，自己基本分回复这张卡的装备怪兽的攻击力一半的数值。
