--- a/data/cards/05399521.yaml
+++ b/data/cards/05399521.yaml
@@ -56,7 +56,7 @@ pendulum_effect:
   ja: |-
     ①：もう片方の自分のＰゾーンに「音響戦士」カードが存在しない場合、このカードのＰスケールは４になる。②：自分エンドフェイズに、除外されている自分の「音響戦士」モンスター１体を対象として発動できる。そのモンスターを手札に加える。
   ko: |-
-    ①: 다른 한쪽 자신의 펜듈럼 존에 "음향전사" 카드가 존재하지 않을 경우, 이 카드의 펜듈럼 스케일은 4 가 된다. ②: 자신 엔드 페이즈에, 제외되어 있는 자신의 "음향전사" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
+    ①: 다른 한쪽 자신의 펜듈럼 존에 "사운드 워리어" 카드가 존재하지 않을 경우, 이 카드의 펜듈럼 스케일은 4 가 된다. ②: 자신 엔드 페이즈에, 제외되어 있는 자신의 "사운드 워리어" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 패에 넣는다.
   zh-TW:
   zh-CN: |-
     ①：另一方自己的灵摆区域没有"音响战士"卡存在的情况下，此卡的灵摆刻度变为4。②：在自己的结束阶段，以自己1只被除外的"音响战士"怪兽为对象可以发动。将该怪兽加入手牌。
