--- a/data/cards/12525049.yaml
+++ b/data/cards/12525049.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     ①：このカードが召喚に成功した時、自分の墓地の「音響戦士」モンスター１体を対象として発動できる。そのモンスターを特殊召喚する。
   ko: |-
-    ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 "음향전사" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
+    ①: 이 카드가 일반 소환에 성공했을 때, 자신 묘지의 "사운드 워리어" 몬스터 1장을 대상으로 하고 발동할 수 있다. 그 몬스터를 특수 소환한다.
   zh-TW:
   zh-CN: |-
     ①：此卡召唤成功时，以自己墓地的1只"音响战士"怪兽为对象可以发动。将该怪兽特殊召唤。
@@ -56,7 +56,7 @@ pendulum_effect:
   ja: |-
     このカード名のＰ効果は１ターンに１度しか使用できない。①：手札を１枚捨てて発動できる。デッキから「音響戦士ギータス」以外の「音響戦士」モンスター１体を特殊召喚する。
   ko: |-
-    "음향전사 기타스"의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 덱에서 "음향전사 기타스" 이외의 "음향전사" 몬스터 1장을 특수 소환한다.
+    "사운드 워리어 기타스"의 펜듈럼 효과는 1턴에 1번밖에 사용할 수 없다. ①: 패를 1장 버리고 발동할 수 있다. 덱에서 "사운드 워리어 기타스" 이외의 "사운드 워리어" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
     此卡名的灵摆效果1回合仅可使用1次。①：舍弃1张手牌可以发动。从牌组将1只"音响战士 吉伊他"以外的"音响战士"怪兽特殊召唤。
