--- a/data/cards/43641473.yaml
+++ b/data/cards/43641473.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     モンスターに装備された装備カード１枚を別の正しい対象に移し替える。
   ko: |-
-    몬스터에 장착된 장착 카드 1장을 다른 적절한 대상에게 옮긴다.
+    몬스터에 장착되어 있는 장착 카드 1장을 다른 적절한 대상에게 옮긴다.
   zh-TW:
   zh-CN: |-
     怪兽装备的1张装备卡转移给1只别的作为正确对象的怪兽。
