--- a/data/cards/85123771.yaml
+++ b/data/cards/85123771.yaml
@@ -8,7 +8,7 @@ name:
   it:
   pt:
   ja: ゴブリン<ruby>降<rt>こう</rt></ruby><ruby>下<rt>か</rt></ruby><ruby>部<rt>ぶ</rt></ruby><ruby>隊<rt>たい</rt></ruby>
-  ja_romaji: Goburin Kōka Butai
+  ja_romaji: Goburin Kōkabutai
   ko:
   ko_rr:
   zh-TW:
