--- a/data/cards/90980792.yaml
+++ b/data/cards/90980792.yaml
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードが召喚・反転召喚・特殊召喚に成功した時、フィールド上の表側表示モンスター１体を選択する。そのモンスターはフィールド上に表側表示で存在する限り、攻撃力が８００ポイントダウンする。
   ko: |-
-    이 몬스터가 일반 소환/반전 소환/특수 소환했을 때, 필드 위의 앞면 표시 몬스터 1장을 선택한다. 그 몬스터가 필드 위에 앞면 표시로 존재하는 한, 공격력은 800 포인트 내린다.
+    이 몬스터가 일반 소환 / 반전 소환 / 특수 소환에 성공했을 때, 필드 위의 앞면 표시 몬스터 1장을 선택한다. 그 몬스터는 필드 위에 앞면 표시로 존재하는 한, 공격력은 800 포인트 내린다.
   zh-TW:
   zh-CN: |-
     这张卡召唤·反转召唤·特殊召唤成功时，选择场上1只表侧表示怪兽。那只怪兽只要在场上表侧表示存在，攻击力下降800。
