--- a/rush.yaml
+++ b/rush.yaml
@@ -124353,3 +124353,53 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1023775
+---
+konami_id:
+name:
+  en: Surging-Wave Swordsman Yoshimitsu Shark
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>波<rt>は</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>刀<rt>とう</rt></ruby><ruby>吉<rt>よし</rt></ruby><ruby>光<rt>みつ</rt></ruby>クリザメ
+  ja_romaji: Hadōtō Yoshimitsu Kurizame
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    A legendary samurai merman who received the divine blessing of the Surging-Wave Sword. There is none that can see the sword fights that take place in the ocean depths.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fish / Normal
+attribute: WATER
+level: 4
+atk: 1500
+def: 0
+series:
+- Surging-Wave
+images:
+- index: 1
+  image: SurgingWaveSwordsmanYoshimitsuShark-RDKP15-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP15-JP002
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1023821
