--- a/rush.yaml
+++ b/rush.yaml
@@ -30040,7 +30040,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 8 DARK Attribute monster on your field can make a second attack this turn.
+    1 face-up Level 8 DARK Attribute monster on your field can attack twice during this turn.
   de:
   es:
   fr:
@@ -33273,7 +33273,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, it can attack all your opponent's monsters once each, also it inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This card loses 1000 ATK until the end of this turn. This turn, this card cannot attack directly, it can attack all monsters on the opponent's field once each, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -102753,7 +102753,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. If a DARK Attribute Galaxy Type monster(s) is among the cards sent, this card can attack up to that many times this turn. Then, if the cards sent are 3 DARK Attribute Galaxy Type monsters with the same Level, you can destroy all face-up Level 8 or lower monsters on your opponent's field.
+    Send the top 3 cards of your Deck to the Graveyard. If a DARK Attribute Galaxy Type monster(s) is among the cards sent, this card can attack up to that many times during this turn. Then, if the cards sent are 3 DARK Attribute Galaxy Type monsters with the same Level, you can destroy all face-up Level 8 or lower monsters on your opponent's field.
   de:
   es:
   fr:
@@ -104390,7 +104390,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card can attack twice. Then, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
+    This card can attack twice during this turn. Also, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -124376,7 +124376,8 @@ text:
   fr:
   it:
   pt:
-  ja:
+  ja: |-
+    波導刀の加護を受けた伝説の武人魚。深海で繰り出す剣戟を見切れる者はいない。
   ko:
   zh-TW:
   zh-CN:
