--- a/data/rush/18610.yaml
+++ b/data/rush/18610.yaml
@@ -45,7 +45,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    This turn, this card can make up to 3 attacks on monsters.
+    This card can make up to 3 attacks on monsters during this turn.
   de:
   es:
   fr:
