--- a/data/rush/19543.yaml
+++ b/data/rush/19543.yaml
@@ -43,7 +43,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    This card can attack twice this turn.
+    This card can attack twice during this turn.
   de:
   es:
   fr:
