--- a/data/rush/16340.yaml
+++ b/data/rush/16340.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of Trap Cards in your Graveyard] x 200 until the end of this turn. Then, if you have 5 or more Trap Cards in your Graveyard, inflict 1000 damage to your opponent.
+    This card gains ATK equal to [the number of Trap Cards in your Graveyard] x 200 until the end of this turn. Also, if you have 5 or more Trap Cards in your Graveyard, inflict 1000 damage to your opponent.
   de:
   es:
   fr:
