--- a/data/rush/17931.yaml
+++ b/data/rush/17931.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Level 4 LIGHT Attribute Galaxy Type monster on your field can make up to 2 attacks on monsters.
+    1 face-up Level 4 LIGHT Attribute Galaxy Type monster on your field can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
