--- a/data/rush/18284.yaml
+++ b/data/rush/18284.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster can attack twice per turn.
+    The equipped monster can attack twice during each turn.
   de:
   es:
   fr:
