--- a/data/rush/18616.yaml
+++ b/data/rush/18616.yaml
@@ -30,7 +30,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● 1 face-up Normal Monster on your field can attack twice this turn.
+    ● 1 face-up Normal Monster on your field can attack twice during this turn.
     ● Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
