--- a/data/rush/18622.yaml
+++ b/data/rush/18622.yaml
@@ -31,7 +31,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of face-up Celestial Warrior Type monsters on your field] x 1000 until the end of this turn.
-    ● This turn, this card can make up to 2 attacks on monsters.
+    ● This card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
