--- a/rush.yaml
+++ b/rush.yaml
@@ -30589,7 +30589,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of Trap Cards in your Graveyard] x 200 until the end of this turn. Then, if you have 5 or more Trap Cards in your Graveyard, inflict 1000 damage to your opponent.
+    This card gains ATK equal to [the number of Trap Cards in your Graveyard] x 200 until the end of this turn. Also, if you have 5 or more Trap Cards in your Graveyard, inflict 1000 damage to your opponent.
   de:
   es:
   fr:
@@ -34466,7 +34466,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top card of your Deck to the Graveyard. Then, if a Cyberse Type monster was sent to the Graveyard by this effect, you can add Cyberse Type monsters with 0 DEF from your Graveyard to your hand, up to [the number of face-up monsters on your opponent's field].
+    Send the top card of your Deck to the Graveyard. Then, if you sent a Cyberse Type monster to the Graveyard by this effect, you can add Cyberse Type monsters with 0 DEF from your Graveyard to your hand, up to [the number of face-up monsters on your opponent's field].
   de:
   es:
   fr:
@@ -37202,7 +37202,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. Then, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
+    This card gains 300 ATK until the end of this turn. Also, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -37613,7 +37613,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 1000 ATK until the end of this turn. Then, if you sent a Warrior Type or Winged Beast Type monster to the Graveyard to meet the requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
+    This card gains 1000 ATK until the end of this turn. Also, if you sent a Warrior Type or Winged Beast Type monster to the Graveyard to meet the requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -54649,7 +54649,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, this card can make up to 3 attacks on monsters. Shuffle this card into the owner's Deck during the End Phase of this turn.
+    This card can make up to 3 attacks on monsters during this turn. Shuffle this card into the owner's Deck during the End Phase of this turn.
   de:
   es:
   fr:
@@ -56279,7 +56279,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 3 cards of your Deck to the Graveyard. If a Reptile Type Normal Monster(s) is among the cards sent, add 1 Reptile Type Normal Monster from your Graveyard to your hand. You can only attack with Reptile Type monsters the turn you activated this effect.
+    Send the top 3 cards of your Deck to the Graveyard. Then, if a Reptile Type Normal Monster(s) is among the cards sent, add 1 Reptile Type Normal Monster from your Graveyard to your hand. You can only attack with Reptile Type monsters the turn you activated this effect.
   de:
   es:
   fr:
@@ -57398,7 +57398,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● Up to 3 face-up monsters on your opponent's field lose 1500 ATK until the end of this turn. This turn, this card can make up to 2 attacks on monsters.
+    ● Up to 3 face-up monsters on your opponent's field lose 1500 ATK until the end of this turn. This card can make up to 2 attacks on monsters during this turn.
     ● This card can attack directly this turn.
   de:
   es:
@@ -63330,7 +63330,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Beast Type Normal Monster on your field can make 3 attacks on monsters this turn. Then, if you have "Magical Sheep Girl Meeeg-chan" face-up on your field, you can make all face-up Effect Monsters on your opponent's field lose 500 ATK until the end of this turn.
+    1 face-up Beast Type Normal Monster on your field can make up to 3 attacks on monsters during this turn. Then, if you have "Magical Sheep Girl Meeeg-chan" face-up on your field, you can make all face-up Effect Monsters on your opponent's field lose 500 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -67497,7 +67497,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● Change the original ATK of up to 3 face-up monsters on your opponent's field to 0 until the end of this turn. This turn, this card can make up to 2 attacks on monsters.
+    ● Change the original ATK of up to 3 face-up monsters on your opponent's field to 0 until the end of this turn. This card can make up to 2 attacks on monsters during this turn.
     ● Destroy 1 Spell/Trap Card on your opponent's field. Then, you can Special Summon 1 monster from your Graveyard face-up to your field.
   de:
   es:
@@ -67921,8 +67921,8 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● All face-up monsters on your field gain 500 ATK until the end of this turn, also this card can make up to 2 attacks on monsters this turn.
-    ● All face-up monsters on your field cannot be destroyed by battle or your opponent's Trap Card effects until the end of this turn, also this card can attack twice this turn.
+    ● All face-up monsters on your field gain 500 ATK until the end of this turn. Also, this card can make up to 2 attacks on monsters during this turn.
+    ● All face-up monsters on your field cannot be destroyed by battle or your opponent's Trap Card effects until the end of this turn. Also, this card can attack twice during this turn.
   de:
   es:
   fr:
@@ -71340,7 +71340,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Effect Monster from your hand face-up to your field. If you sent an Effect Monster whose original Level is 7 or higher to the Graveyard to meet the requirement, the monster Special Summoned by this effect can make up to 2 attacks on monsters this turn.
+    Special Summon 1 Effect Monster from your hand face-up to your field. If you sent an Effect Monster whose original Level is 7 or higher to the Graveyard to meet the requirement, the monster Special Summoned by this effect can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -77202,7 +77202,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Level 4 LIGHT Attribute Galaxy Type monster on your field can make up to 2 attacks on monsters.
+    1 face-up Level 4 LIGHT Attribute Galaxy Type monster on your field can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -80269,7 +80269,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 500 ATK until the end of this turn. Then, if no Spell/Trap Cards are on the field, this card can make up to 2 attacks on monsters this turn.
+    This card gains 500 ATK until the end of this turn. Also, if no Spell/Trap Cards are on the field, this card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -84242,7 +84242,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    The equipped monster can attack twice per turn.
+    The equipped monster can attack twice during each turn.
   de:
   es:
   fr:
@@ -86798,7 +86798,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card can attack twice per turn.
+    This card can attack twice during each turn.
   de:
   es:
   fr:
@@ -93369,7 +93369,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    This turn, this card can make up to 3 attacks on monsters.
+    This card can make up to 3 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -93871,7 +93871,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● 1 face-up Normal Monster on your field can attack twice this turn.
+    ● 1 face-up Normal Monster on your field can attack twice during this turn.
     ● Set 1 "Fusion" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
@@ -93957,7 +93957,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● 2 Attack Position monsters with the same name on your field can attack twice this turn.
+    ● 2 Attack Position monsters with the same name on your field can attack twice during this turn.
     ● Special Summon 2 Normal Monsters with the same name from your Graveyard face-up to your field.
   de:
   es:
@@ -94403,7 +94403,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of face-up Celestial Warrior Type monsters on your field] x 1000 until the end of this turn.
-    ● This turn, this card can make up to 2 attacks on monsters.
+    ● This card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -97740,7 +97740,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice this turn. Then, if 3 of the results are heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
+    Toss a coin a number of times equal to [the number of face-up monsters on your opponent's field]. If at least 1 of the results is heads, this card can attack twice during this turn. Then, if 3 of the results are heads, this card inflicts piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference), if it attacks a Defense Position monster this turn.
   de:
   es:
   fr:
@@ -99525,7 +99525,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
+    This card gains 600 ATK until the end of this turn. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -105374,7 +105374,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters this turn.
+    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Also, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -107278,7 +107278,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Then, if this card is in Maximum Mode, increase its Level by 5.
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's Trap Card effects. Also, if this card is in Maximum Mode, increase its Level by 5.
   de:
   es:
   fr:
@@ -107368,7 +107368,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    1 face-up monster on your field gains 500 ATK until the end of this turn. Then, if this card is in Maximum Mode, inflict 500 damage to your opponent.
+    1 face-up monster on your field gains 500 ATK until the end of this turn. Also, if this card is in Maximum Mode, inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -107458,7 +107458,7 @@ effect_types:
 - Continuous
 effect:
   en: |-
-    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Then, if this card is in Maximum Mode, it can make up to 3 attacks on monsters each turn.
+    This card's name becomes "Harpie Ladies" and it cannot be destroyed by your opponent's monster effects. Also, if this card is in Maximum Mode, it can make up to 3 attacks on monsters during each turn.
   de:
   es:
   fr:
@@ -110793,7 +110793,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card loses 600 ATK until the end of this turn. Then, toss a coin. If the result is heads, this card can attack 3 times this turn. If the result is tails, this turn, this card can make up to 2 attacks on monsters, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
+    This card loses 600 ATK until the end of this turn. Then, toss a coin. If the result is heads, this card can make a second and third attack during this turn. If the result is tails, this turn, this card can make up to 2 attacks on monsters, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference).
   de:
   es:
   fr:
@@ -115035,8 +115035,8 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● This card can attack 3 times during this turn.
-    ● Shuffle up to 3 Normal Monsters from your Graveyard into the Deck. Then, you can destroy Spell/Trap Cards on your opponent's field, up to [the number of "The Dragias" shuffled into the Deck by this effect].
+    ● This card can make a second and third attack during this turn.
+    ● Shuffle up to 3 Normal Monsters from your Graveyard into the Deck. Then, you can destroy Spell/Trap Cards on your opponent's field, up to [the number of "The Dragias" shuffled by this effect].
   de:
   es:
   fr:
@@ -116638,7 +116638,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    This card can attack twice this turn.
+    This card can attack twice during this turn.
   de:
   es:
   fr:
@@ -117753,7 +117753,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 1500 ATK until the end of this turn. Then, you can choose 1 face-up monster on your field with the same Level and Type as that monster. If you do, that monster on your field can attack twice this turn.
+    1 face-up monster on your opponent's field loses 1500 ATK until the end of this turn. Then, you can choose 1 face-up monster on your field with the same Level and Type as that monster. If you do, that monster on your field can attack twice during this turn.
   de:
   es:
   fr:
