--- a/data/rush/16321.yaml
+++ b/data/rush/16321.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 800 ATK until the end of this turn. Then, you can destroy a Field Spell Card on your opponent's field. Then, if you destroyed a Field Spell Card by this effect, inflict 800 damage to your opponent.
+    1 face-up monster on your opponent's field loses 800 ATK until the end of this turn. Then, you can destroy a Field Spell Card on your opponent's field. If you destroyed a Field Spell Card by this effect, inflict 800 damage to your opponent.
   de:
   es:
   fr:
