--- a/data/rush/16605.yaml
+++ b/data/rush/16605.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster, if they have 3 monsters on their field.
+    When your opponent Normal or Special Summons a monster and they have 3 monsters on their field.
   de:
   es:
   fr:
