--- a/data/rush/16672.yaml
+++ b/data/rush/16672.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. Also, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
+    This card gains 300 ATK until the end of this turn. Then, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
