--- a/data/rush/17209.yaml
+++ b/data/rush/17209.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field, that Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains additional 1000 ATK until the end of this turn.
+    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field, that monster on your field gains additional 1000 ATK until the end of this turn.
   de:
   es:
   fr:
