--- a/data/rush/19565.yaml
+++ b/data/rush/19565.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster in face-up Attack Position, and they have 2 or more monsters on their field.
+    When your opponent Normal or Special Summons a monster in face-up Attack Position and they have 2 or more monsters on their field.
   de:
   es:
   fr:
