--- a/data/rush/16364.yaml
+++ b/data/rush/16364.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons a monster and you have a face-up Winged Beast Type monster on your field.
+    When your opponent Normal Summons a monster while you have a face-up Winged Beast Type monster on your field.
   de:
   es:
   fr:
