--- a/data/rush/17328.yaml
+++ b/data/rush/17328.yaml
@@ -28,7 +28,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 5 cards of your Deck to the Graveyard. If a Reptile Type monster(s) is among the cards sent, you can make 1 face-up Reptile Type monster on your field gain ATK equal to [the number of Reptile Type monsters sent to the Graveyard by this effect] x 200 until the end of this turn.
+    Send the top 5 cards of your Deck to the Graveyard. Then, if a Reptile Type monster(s) is among the cards sent, you can make 1 face-up Reptile Type monster on your field gain ATK equal to [the number of Reptile Type monsters sent to the Graveyard by this effect] x 200 until the end of this turn.
   de:
   es:
   fr:
