--- a/rush.yaml
+++ b/rush.yaml
@@ -29234,7 +29234,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up monster on your opponent's field loses 800 ATK until the end of this turn. Then, you can destroy a Field Spell Card on your opponent's field. Then, if you destroyed a Field Spell Card by this effect, inflict 800 damage to your opponent.
+    1 face-up monster on your opponent's field loses 800 ATK until the end of this turn. Then, you can destroy a Field Spell Card on your opponent's field. If you destroyed a Field Spell Card by this effect, inflict 800 damage to your opponent.
   de:
   es:
   fr:
@@ -30589,7 +30589,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains ATK equal to [the number of Trap Cards in your Graveyard] x 200 until the end of this turn. Also, if you have 5 or more Trap Cards in your Graveyard, inflict 1000 damage to your opponent.
+    This card gains ATK equal to [the number of Trap Cards in your Graveyard] x 200 until the end of this turn. Then, if you have 5 or more Trap Cards in your Graveyard, inflict 1000 damage to your opponent.
   de:
   es:
   fr:
@@ -32232,7 +32232,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal Summons a monster and you have a face-up Winged Beast Type monster on your field.
+    When your opponent Normal Summons a monster while you have a face-up Winged Beast Type monster on your field.
   de:
   es:
   fr:
@@ -34338,7 +34338,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up Level 7 or higher Dinosaur Type monster on your field gains 1500 ATK, and cannot be destroyed by your opponent's card effects.
+    This turn, 1 face-up Level 7 or higher Dinosaur Type monster on your field gains 1500 ATK and cannot be destroyed by your opponent's card effects.
   de:
   es:
   fr:
@@ -35519,7 +35519,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster, if they have 3 monsters on their field.
+    When your opponent Normal or Special Summons a monster and they have 3 monsters on their field.
   de:
   es:
   fr:
@@ -37202,7 +37202,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 300 ATK until the end of this turn. Also, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
+    This card gains 300 ATK until the end of this turn. Then, if you have 4 or more Level 7 monsters with different names in your Graveyard, you can Special Summon 1 Level 7 monster from your Graveyard face-up to your field.
   de:
   es:
   fr:
@@ -37613,7 +37613,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 1000 ATK until the end of this turn. Also, if you sent a Warrior Type or Winged Beast Type monster to the Graveyard to meet the requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
+    This card gains 1000 ATK until the end of this turn. Then, if you sent a Warrior Type or Winged Beast Type monster to the Graveyard to meet the requirement, you can add 1 Level 6 or lower Normal Monster from your Graveyard to your hand.
   de:
   es:
   fr:
@@ -39437,7 +39437,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 4 cards of your Deck to the Graveyard. Then, if 4 FIRE Attribute Beast Type monsters were sent to the Graveyard by this effect, 1 face-up monster on the field gains 2900 ATK until the end of this turn.
+    Send the top 4 cards of your Deck to the Graveyard. Then, if you sent 4 FIRE Attribute Beast Type monsters to the Graveyard by this effect, 1 face-up monster on the field gains 2900 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -50126,7 +50126,7 @@ effect_types:
 effect:
   en: |-
     ● This card gains ATK equal to [the number of monsters on the field] x 300 until the end of this turn.
-    ● Look at all face-down Spell/Trap Cards on your opponent's field, and destroy 1 of them.
+    ● Look at all face-down Spell/Trap Cards on your opponent's field and destroy 1 of them.
   de:
   es:
   fr:
@@ -50311,7 +50311,7 @@ effect_types:
 - Multi-Choice
 effect:
   en: |-
-    ● Until the end of your opponent's next turn, while this card is face-up, it gains 500 ATK, also neither player can Special Summon Level 9 or lower monsters in face-up Attack Position.
+    ● Until the end of your opponent's next turn, while this card is face-up, it gains 500 ATK and neither player can Special Summon Level 9 or lower monsters in face-up Attack Position.
     ● Change the battle position of 1 monster on the field.
   de:
   es:
@@ -53482,7 +53482,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field, that Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains additional 1000 ATK until the end of this turn.
+    1 face-up Level 6 or higher DARK Attribute Spellcaster Type monster on your field gains 1000 ATK until the end of this turn. Then, if you have "Dark Magician" or "Dark Magician Girl" face-up on your field, that monster on your field gains additional 1000 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -58089,7 +58089,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. Then, if your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
+    Add 1 "Zap Zap Octospark" from your Graveyard to your hand. Then, inflict 800 damage to your opponent. If your opponent has a face-up Level 8 monster on their field, this turn, this card gains 800 ATK and all face-up Level 8 monsters on your opponent's field lose 800 ATK.
   de:
   es:
   fr:
@@ -58879,7 +58879,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Send the top 5 cards of your Deck to the Graveyard. If a Reptile Type monster(s) is among the cards sent, you can make 1 face-up Reptile Type monster on your field gain ATK equal to [the number of Reptile Type monsters sent to the Graveyard by this effect] x 200 until the end of this turn.
+    Send the top 5 cards of your Deck to the Graveyard. Then, if a Reptile Type monster(s) is among the cards sent, you can make 1 face-up Reptile Type monster on your field gain ATK equal to [the number of Reptile Type monsters sent to the Graveyard by this effect] x 200 until the end of this turn.
   de:
   es:
   fr:
@@ -59465,7 +59465,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Your opponent's monsters with 3000 or more ATK cannot attack this turn. Then, you can shuffle up to 5 Reptile Type monsters from your Graveyard into the Deck.
+    Your opponent's monsters with 3000 or more ATK cannot attack this turn. Also, you can shuffle up to 5 Reptile Type monsters from your Graveyard into the Deck.
   de:
   es:
   fr:
@@ -63522,7 +63522,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Destroy 1 face-up monster with 2000 or more DEF on your opponent's field. Gain 800 LP, and inflict 800 damage to your opponent. Your Effect Monsters cannot attack this turn.
+    Destroy 1 face-up monster with 2000 or more DEF on your opponent's field. Gain 800 LP and inflict 800 damage to your opponent. Your Effect Monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -70361,7 +70361,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Choose 1 Spell/Trap Card on your opponent's field, and destroy all other Spell/Trap Cards on their field. Your monsters cannot attack this turn.
+    Choose 1 Spell/Trap Card on your opponent's field and destroy all other Spell/Trap Cards on their field. Your monsters cannot attack this turn.
   de:
   es:
   fr:
@@ -70741,7 +70741,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Look at your opponent's hand. You can choose up to 3 Spell/Trap Cards from their hand. If you do, your opponent Sets those cards to their field, and they take damage equal to [the number of cards Set by this effect] x 300.
+    Look at your opponent's hand. You can choose up to 3 Spell/Trap Cards from their hand. If you do, your opponent Sets those cards to their field and they take damage equal to [the number of cards Set by this effect] x 300.
   de:
   es:
   fr:
@@ -80269,7 +80269,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card gains 500 ATK until the end of this turn. Also, if no Spell/Trap Cards are on the field, this card can make up to 2 attacks on monsters during this turn.
+    This card gains 500 ATK until the end of this turn. Then, if no Spell/Trap Cards are on the field, this card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -83116,7 +83116,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 WATER Attribute Sea Serpent Type monster from your Graveyard to your hand. Then, if you added "Unidentified Mysterious Urchin" to your hand by this effect, this card gains 1400 ATK until the end of this turn.
+    Add 1 WATER Attribute Sea Serpent Type monster from your Graveyard to your hand. If you added "Unidentified Mysterious Urchin" to your hand by this effect, this card gains 1400 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -99525,7 +99525,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    This card gains 600 ATK until the end of this turn. Also, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
+    This card gains 600 ATK until the end of this turn. Then, if this card is in Maximum Mode, it cannot be destroyed by your opponent's card effects until the end of your opponent's next turn.
   de:
   es:
   fr:
@@ -104390,7 +104390,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This card can attack twice during this turn. Also, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
+    This card can attack twice during this turn. Also, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. If you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
   de:
   es:
   fr:
@@ -105374,7 +105374,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Also, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters during this turn.
+    Special Summon 1 Level 9 or lower LIGHT Attribute Spellcaster Type monster from your Graveyard to your field in face-up Defense Position. Then, if this card is equipped with an Equip Spell Card, this card can make up to 2 attacks on monsters during this turn.
   de:
   es:
   fr:
@@ -107368,7 +107368,7 @@ effect_types:
 - Effect
 effect:
   en: |-
-    1 face-up monster on your field gains 500 ATK until the end of this turn. Also, if this card is in Maximum Mode, inflict 500 damage to your opponent.
+    1 face-up monster on your field gains 500 ATK until the end of this turn. Then, if this card is in Maximum Mode, inflict 500 damage to your opponent.
   de:
   es:
   fr:
@@ -108984,7 +108984,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Change the attacking monster to face-up Defense Position. Then, if your LP are lower than or equal to your opponent's, you can destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
+    Change the attacking monster to face-up Defense Position. If your LP are lower than or equal to your opponent's, you can destroy 1 Attack Position monster on your opponent's field. Then, inflict damage to your opponent equal to [the original ATK of the monster destroyed by this effect].
   de:
   es:
   fr:
@@ -117870,7 +117870,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    This turn, 1 face-up monster on your field gains 900 ATK and your opponent cannot activate Trap Cards when it declares an attack. Then, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
+    This turn, 1 face-up monster on your field gains 900 ATK and your opponent cannot activate Trap Cards when it declares an attack. Also, you can Special Summon 1 "Dragonic Slayer" from your Graveyard to your field in face-up Defense Position.
   de:
   es:
   fr:
@@ -117971,7 +117971,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    When your opponent Normal or Special Summons a monster in face-up Attack Position, and they have 2 or more monsters on their field.
+    When your opponent Normal or Special Summons a monster in face-up Attack Position and they have 2 or more monsters on their field.
   de:
   es:
   fr:
@@ -119368,7 +119368,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Add 1 DARK Attribute Psychic Type monster with 0 DEF from your Graveyard to your hand. Then, if you added "Vi-FRND" to your hand by this effect, you can send the top 3 cards of your Deck to the Graveyard.
+    Add 1 DARK Attribute Psychic Type monster with 0 DEF from your Graveyard to your hand. If you added "Vi-FRND" to your hand by this effect, you can send the top 3 cards of your Deck to the Graveyard.
   de:
   es:
   fr:
