--- a/data/cards/31464658.yaml
+++ b/data/cards/31464658.yaml
@@ -15,7 +15,7 @@ name:
   zh-CN: 三眼的死灵
 text:
   en: |-
-    You can send this card you control to the GY; add 1 Level 10 DARK monster from your Deck to your hand. You can only use this effect of "Three-Eyed Ghost" once per turn.
+    You can send this card from the field to the GY; add 1 Level 10 DARK monster from your Deck to your hand. You can only use this effect of "Three-Eyed Ghost" once per turn.
   de:
   es:
   fr:
@@ -45,7 +45,4 @@ sets:
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
-is_translation_unofficial:
-  text:
-    en: true
 yugipedia_page_id: 924880
