--- a/data/rush/yugipedia1024560.yaml
+++ b/data/rush/yugipedia1024560.yaml
@@ -7,14 +7,14 @@ name:
   it:
   pt:
   ja: ミラクルピック
-  ja_romaji:
+  ja_romaji: Mirakuru Pikku
   ko:
   ko_rr:
   zh-TW:
   zh-CN:
 requirement:
   en: |-
-    Reveal 1 Level 7 LIGHT or DARK Attribute Psychic Type monster with 0 DEF in your hand to your oppoennt.
+    Reveal 1 Level 7 LIGHT or DARK Attribute Psychic Type monster with 0 DEF in your hand to your opponent.
   de:
   es:
   fr:
@@ -38,6 +38,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: MiraclePick-RDKP15-JP-OP.png
