--- a/data/rush/yugipedia1024563.yaml
+++ b/data/rush/yugipedia1024563.yaml
@@ -6,8 +6,8 @@ name:
   fr:
   it:
   pt:
-  ja: ピース＆ロックンロール
-  ja_romaji:
+  ja: ピース<ruby>＆<rt>アンド</rt></ruby>ロックンロール
+  ja_romaji: Pīsu Ando Rokkunrōru
   ko:
   ko_rr:
   zh-TW:
@@ -38,6 +38,8 @@ effect:
   zh-CN:
 card_type: Trap
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: PeaceRocknRoll-RDKP15-JP-OP.png
