--- a/data/rush/15435.yaml
+++ b/data/rush/15435.yaml
@@ -59,6 +59,10 @@ series:
 images:
 - index: 1
   image: EsperadetheSmashingSuperstar-RDSBD4-JP-C.png
+  illustration: EsperadetheSmashingSuperstar-DBR-JP-VG-artwork.png
+- index: 2
+  image: EsperadetheSmashingSuperstar-RDKP15-JP-OP.png
+  illustration: EsperadetheSmashingSuperstar-OW.png
 sets:
   ja:
   - set_number: RD/KP02-JP025
@@ -73,6 +77,10 @@ sets:
     set_name: Strongest Battle Deck Romin - Psychic Beat
     rarities:
     - Common
+  - set_number: RD/KP15-JP000
+    set_name: Red Reboot of Darkness
+    rarities:
+    - Over Rush Rare
   ko:
   - set_number: RD/KP02-KR025
     set_name: 'Deck Mod Pack: Shocking Lightning Attack!!'
